--- a/my-fast-food-web-shop/src/main/webapp/WEB-INF/common/navigation.jspf
+++ b/my-fast-food-web-shop/src/main/webapp/WEB-INF/common/navigation.jspf
@@ -7,7 +7,7 @@
 	<div class="navbar-collapse">
 	<ul class="nav navbar-nav">	
 			<li class="active"><a href="/">Home</a></li>
-			<li><a href="/list-of-food">OrderList</a></li>
+			<li><a href="/orders">OrderList</a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
 			<li><a href="/logout">Logout</a></li>
